--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Angular GitHub statistics</title>
+    <title>What does angular.js consist of</title>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.0.0/angular-strap.js"></script>
@@ -15,7 +15,7 @@
 </head>
 <body ng-app='myApp'>
     <div class="container">
-        <h1 class="text-center">angular.js</h1>
+        <h1 class="text-center">What does angular.js consist of</h1>
         <div class="row" ng-controller="mainCtrl">
             <h3 class="text-center" ng-hide="languages">Loading...</h3>
             <div ng-show="languages">
