--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
     <link rel="stylesheet" href="/css/app.css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/angular.charts/0.2.0/angular-charts.min.js"></script>
 </head>
 <body ng-app='myApp'>
     <div class="container">
         <h1 class="text-center">What does angular.js consist of</h1>
         <div class="row" ng-controller="mainCtrl">
-            <h3 class="text-center" ng-hide="languages">Loading...</h3>
-            <div ng-show="languages">
+            <h3 class="text-center" ng-hide="loaded">Loading...</h3>
+            <div ng-show="loaded">
                 <div class="col-md-6 col-sm-6">
                     <div class="ng-grid" ng-grid="gridOptions"></div>
                 </div>
                 <div class="col-md-6 col-sm-6">
-                    <p class="text-center">Here Be Dragons</p>
+                    <div data-ac-chart="'pie'" data-ac-data="languages_chart" data-ac-config="languages_chart_config" class="ac-chart"></div>
                 </div>
             </div>
         </div>
