--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>What does angular.js consist of</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.css">
     <link rel="stylesheet" href="css/app.css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.11/ng-grid.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/angular.charts/0.2.0/angular-charts.min.js"></script>
 </head>
 <body ng-app='myApp'>
@@ -20,8 +16,8 @@
         <div class="row" ng-controller="mainCtrl">
             <h3 class="text-center" ng-hide="loaded">Loading...</h3>
             <div ng-show="loaded">
-                <div class="col-md-6 col-sm-6">
-                    <div class="ng-grid" ng-grid="gridOptions"></div>
+                <div class="col-md-6 col-sm-6 text-center">
+                    coming soon
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div data-ac-chart="'pie'" data-ac-data="languages_chart" data-ac-config="languages_chart_config" class="ac-chart"></div>
