--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>What does angular.js consist of</title>
+    <title>GitHub explorer</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body ng-app='githubExplorer'>
     <div class="container">
-        <h1 class="text-center">What does angular.js consist of</h1>
+        <h1 class="text-center">GitHub explorer</h1>
         <div class="row" ng-controller="mainCtrl">
             <h3 class="text-center" ng-hide="loaded">Loading...</h3>
             <div ng-show="loaded">
